--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+h5 {
+  margin-top: 5em;
+}
+
 .App {
   text-align: center;
 }
@@ -14,4 +18,30 @@
 .table-rows th, .table-rows td {
   border: solid black 1px;
   padding: .5em;
+}
+
+.playlist-table {
+  margin-top: 2em;
+}
+
+.playlist-button {
+  margin-left: .5em;
+}
+
+
+.playlist-create-title {
+  margin-top: 2em;
+}
+
+.playlist-create-button {
+  margin-left: 1em;
+}
+
+.playlist-create-input {
+  margin-right: 1em
+}
+
+.select {
+  max-width: 25em;
+  margin: auto;
 }
