--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,13 @@ h5 {
 }
 
 .select {
-  max-width: 25em;
+  width: 25em;
   margin: auto;
+}
+
+.search-form {
+  display: flex;
+  margin: auto;
+  max-width: 30em;
+  align-items: center;
 }
