--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,15 @@ h5 {
   margin-top: 2em;
 }
 
+.form-create{
+  text-align: left;
+  max-width:fit-content;
+  margin: 2em auto;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
 .form-create-title {
   margin-top: 2em;
 }
@@ -94,7 +103,10 @@ h5 {
 }
 
 .form-create-input {
+  width: 100%;
   margin-right: 1em;
+  /* padding: 10px 0; */
+  font-size: 1rem;
 }
 
 .form-update-artist {
@@ -106,7 +118,7 @@ h5 {
 }
 
 .select {
-  width: 25em;
+  width:340px;
   margin: auto;
 }
 
