--- a/src/App.css
+++ b/src/App.css
@@ -116,26 +116,70 @@ h5 {
   max-width: 25rem;
 }
 
+/***************************
+**********BUTTONS***********
+****************************/
+
 .table-button {
   margin-left: 0.5rem;
 }
 
+
 .delete-button, .edit-button, .add-button {
   color: #ffffff;
-  
   padding: .25rem 1rem;
   border: none;
   border-radius: 5%;
   font-weight: 600;
 }
 
+.edit-button {
+  background-color: #4a7be6;
+}
+
 .delete-button {
   background-color: #eb4141;
 }
 
-.edit-button {
-  background-color: #4e86fe;
+.add-button {
+  color: #2b2727;
+  background-color: #75df55;
+  max-width: fit-content;
+  margin: auto;
+  
 }
+
+.edit-button:hover {
+  cursor: pointer;
+  background-color: #6092fd;
+}
+
+.delete-button:hover {
+  cursor: pointer;
+  background-color: #f96666;
+}
+
+.add-button:hover {
+  cursor: pointer;
+  background-color: #84fc5f;
+} 
+
+.form-button {
+  margin: auto;
+  margin-top: 1rem;
+  width: 4rem;
+}
+
+.edit-button-container {
+  margin: auto;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  max-width: fit-content;
+  gap: 1rem;
+}
+
+
 
 /***************************
 *****PLAYLIST VIEW PAGE*****
@@ -147,7 +191,6 @@ h5 {
 .playlist-table {
   margin-top: 2rem;
 }
-
 
 
 /***************************
@@ -186,12 +229,6 @@ h5 {
   margin-right: .5rem;
 }
 
-.form-button {
-  margin: auto;
-  margin-top: 1rem;
-  width: 4rem;
-}
-
 .form-edit-container {
   max-width: fit-content;
   margin: 2rem auto;
@@ -208,21 +245,12 @@ h5 {
   padding: 1rem 2rem;
 }
 
-.edit-button-container {
-  margin-bottom: 1rem;
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-}
-
-.add-button {
-  color: #2b2727;
-  background-color: #75df55;
-}
+/***************************
+********SEARCH FORMS*********
+****************************/
 
 .search-container {
   margin: auto;
-/*  border: 1px solid #aaaaaa; */
   max-width: 30rem;
   padding: .5rem 2rem;
   border-radius: 3%;
