Updated citation information

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+/* App.css
+
+Citation Information
+This file was originally provided with the create-react-app starter code, 
+but has been completely rewritten. The original code can be found at:
+https://react.dev/reference/react
+*/
+
+
 h5 {
   margin-top: 5em;
 }
