--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+/* index.css
+
+Citation Information
+This file was provided with the create-react-app starter code. No changes
+have been made. Code was obtained from: https://react.dev
+Date: 10/28/2023
+*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
